--- a/ML/model/CV.ipynb
+++ b/ML/model/CV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -64,9 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -87,38 +89,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-rmse:14.4029\ttest-rmse:14.4029\n",
-      "[50]\ttrain-rmse:1.15771\ttest-rmse:1.16089\n",
-      "[100]\ttrain-rmse:0.312754\ttest-rmse:0.334931\n",
-      "[150]\ttrain-rmse:0.287148\ttest-rmse:0.319795\n",
-      "[200]\ttrain-rmse:0.277235\ttest-rmse:0.31804\n",
-      "[250]\ttrain-rmse:0.269465\ttest-rmse:0.31755\n",
-      "[300]\ttrain-rmse:0.262086\ttest-rmse:0.317157\n",
-      "309\n"
+      "[0]\ttrain-rmse:14.4027\ttest-rmse:14.4028\n",
+      "[50]\ttrain-rmse:1.15845\ttest-rmse:1.1601\n",
+      "[100]\ttrain-rmse:0.324909\ttest-rmse:0.33664\n",
+      "[150]\ttrain-rmse:0.303985\ttest-rmse:0.321419\n",
+      "[200]\ttrain-rmse:0.297296\ttest-rmse:0.319335\n",
+      "[250]\ttrain-rmse:0.291982\ttest-rmse:0.318278\n",
+      "[300]\ttrain-rmse:0.287582\ttest-rmse:0.317583\n",
+      "[350]\ttrain-rmse:0.283497\ttest-rmse:0.317135\n",
+      "[400]\ttrain-rmse:0.279629\ttest-rmse:0.316825\n",
+      "[450]\ttrain-rmse:0.275974\ttest-rmse:0.316666\n",
+      "[500]\ttrain-rmse:0.272538\ttest-rmse:0.316542\n",
+      "[550]\ttrain-rmse:0.269331\ttest-rmse:0.316507\n",
+      "[600]\ttrain-rmse:0.266131\ttest-rmse:0.316368\n",
+      "[650]\ttrain-rmse:0.263164\ttest-rmse:0.316343\n",
+      "620\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'booster'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-0456058d7153>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0mxgb_params\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'n_estimators'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv_output\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mxgb_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;31m# model = XGBRegressor(seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'booster'"
      ]
     }
    ],
    "source": [
-    "xgb_params = {\n",
-    "        'learning_rate': 0.05,\n",
-    "        'max_depth': 5,\n",
-    "        'subsample': 0.7,\n",
-    "        'colsample_bytree': 0.7,\n",
-    "        'objective': 'reg:linear',\n",
-    "        #'eval_metric': 'rmse',\n",
-    "        'min_child_weight': 1,\n",
-    "        'silent': 1,\n",
-    "        'seed':5\n",
-    "    }\n",
+    "# xgb_params = {\n",
+    "#         'learning_rate': 0.05,\n",
+    "#         'max_depth': 5,\n",
+    "#         'subsample': 0.7,\n",
+    "#         'colsample_bytree': 0.7,\n",
+    "#         'objective': 'reg:linear',\n",
+    "#         #'eval_metric': 'rmse',\n",
+    "#         'min_child_weight': 1,\n",
+    "#         'silent': 1,\n",
+    "#         'seed':5\n",
+    "#     }\n",
+    "\n",
+    "xgb_params = {'learning_rate': 0.05,\n",
+    "              'max_depth': 4,\n",
+    "              'subsample': 0.95,\n",
+    "              'reg_alpha': 0,\n",
+    "              'min_child_weight':4,\n",
+    "              'colsample_bytree': 0.95,\n",
+    "              'gamma':.4,\n",
+    "              'objective': 'reg:linear',\n",
+    "              'silent': 1,\n",
+    "              #'booster' :'gbtree',\n",
+    "              #'tuneLength': 3,\n",
+    "              'seed': 5 }\n",
     "\n",
     "dtrain = xgb.DMatrix(X_train, y_train)\n",
     "dtest = xgb.DMatrix(X_test)\n",
@@ -141,7 +176,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "xgb_params = {'learning_rate': 0.05,\n",
+    "              'max_depth': 4,\n",
+    "              'subsample': 0.95,\n",
+    "              'reg_alpha': 0,\n",
+    "              'min_child_weight':4,\n",
+    "              'colsample_bytree': 0.95,\n",
+    "              'gamma':.4,\n",
+    "              'objective': 'reg:linear',\n",
+    "              'silent': 1,\n",
+    "              #'booster' :'gbtree',\n",
+    "              #'tuneLength': 3,\n",
+    "              'seed': 5 }\n",
+    "#print(len(cv_output)) #309\n",
+    "\n",
+    "xgb_params['n_estimators']=620 #len(cv_output)\n",
+    "\n",
+    "model = XGBRegressor(**xgb_params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "rf_params = {\n",
+    "    'n_jobs': 16,\n",
+    "    'n_estimators': 100,\n",
+    "    'max_features': 0.2,\n",
+    "    'max_depth': 12,\n",
+    "    'min_samples_leaf': 2,\n",
+    "}\n",
+    "model1 = RandomForestRegressor(**rf_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "et_params = {\n",
+    "    'n_jobs': 16,\n",
+    "    'n_estimators': 100,\n",
+    "    'max_features': 0.5,\n",
+    "    'max_depth': 12,\n",
+    "    'min_samples_leaf': 2,\n",
+    "    'random_state': 10\n",
+    "}\n",
+    "model2 = ExtraTreesRegressor(**et_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "model3=GradientBoostingRegressor(learning_rate=0.02, n_estimators=500,min_samples_leaf=70, \n",
+    "                                 min_samples_split=200, max_features='sqrt',max_depth=6,subsample=0.85,\n",
+    "                                 random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -152,7 +272,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_rmse = 0.261787007971 , val_rmse = 0.31980116091\n"
+      "xgb\n",
+      "train_rmse = 0.266837631073 , val_rmse = 0.31900151058\n",
+      "rf\n",
+      "train_rmse = 0.241249700631 , val_rmse = 0.324802592639\n",
+      "et\n",
+      "train_rmse = 0.247191933346 , val_rmse = 0.324373969057\n",
+      "gbm\n",
+      "train_rmse = 0.290022115756 , val_rmse = 0.319881574992\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test = data_preprocess(X_train, X_test)\n",
+    "for m, name in zip([model, model1, model2, model3],['xgb','rf','et','gbm']):\n",
+    "    print(name)\n",
+    "    CV(X_train, y_train, m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_rmse = 0.265971694683 , val_rmse = 0.319114085918\n"
      ]
     }
    ],
@@ -167,73 +318,46 @@
     "#log1p seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, n_estimators=281, \n",
     "#colsample_bytree=0.7 train_rmse = 0.266050150088 , val_rmse = 0.319972286248\n",
     "\n",
-    "#jun24 data log1p seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, n_estimators=281, \n",
-    "#colsample_bytree=0.7 train_rmse = 0.261787007971 , val_rmse = 0.31980116091"
+    "#jun23 data log1p xgb seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, n_estimators=309, \n",
+    "#colsample_bytree=0.7 train_rmse = 0.261787007971 , val_rmse = 0.31980116091\n",
+    "\n",
+    "\n",
+    "#jun24 data log1p xgb seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, n_estimators=332, \n",
+    "#colsample_bytree=0.7, train_rmse = 0.258649992867 , val_rmse = 0.320011541733\n",
+    "\n",
+    "#jun24 data log1p xgb_params = {'learning_rate': 0.05,'max_depth': 4,'subsample': 0.95,'reg_alpha': 0,\n",
+    "#'min_child_weight':4,'colsample_bytree': 0.95,'gamma':.4,'objective': 'reg:linear',\n",
+    "#'seed': 5, 'n_estimators':620 train_rmse = 0.265971694683 , val_rmse = 0.319114085918\n",
+    "\n",
+    "#jun24 data log1p GradientBoostingRegressor(learning_rate=0.02, n_estimators=500,min_samples_leaf=70, \n",
+    "#min_samples_split=200, max_features='sqrt',max_depth=6,subsample=0.85,random_state=10)\n",
+    "#train_rmse = 0.265971694683 , val_rmse = 0.319114085918\n",
+    "\n",
+    "#jun24 data log1p RF rf_params = {'n_jobs': 16,'n_estimators': 100,'max_features': 0.2,'max_depth': 12,\n",
+    "#'min_samples_leaf': 2}train_rmse = 0.241249700631 , val_rmse = 0.324802592639\n",
+    "\n",
+    "#jun24 data log1p ET et_params = {'n_jobs': 16,'n_estimators': 100,'max_features': 0.5,'max_depth': 12,\n",
+    "#'min_samples_leaf': 2,'random_state': 10} train_rmse = 0.247191933346 , val_rmse = 0.324373969057"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "conbined_data: (36650, 702)\n",
-      "submit test size: 0.264316268801\n",
-      "validate size: 0.359279752415\n",
-      "('X_train_all shape is', (28988, 702))\n",
-      "('X_train shape is', (21326, 702))\n",
-      "('y_train shape is', (21326,))\n",
-      "('X_val shape is', (7662, 702))\n",
-      "('y_val shape is', (7662,))\n",
-      "('X_test shape is', (7662, 702))\n",
-      "[0]\teval-rmse:14.401\n",
-      "Will train until eval-rmse hasn't improved in 40 rounds.\n",
-      "[10]\teval-rmse:8.62748\n",
-      "[20]\teval-rmse:5.17376\n",
-      "[30]\teval-rmse:3.11093\n",
-      "[40]\teval-rmse:1.88354\n",
-      "[50]\teval-rmse:1.1597\n",
-      "[60]\teval-rmse:0.744146\n",
-      "[70]\teval-rmse:0.517844\n",
-      "[80]\teval-rmse:0.406038\n",
-      "[90]\teval-rmse:0.356851\n",
-      "[100]\teval-rmse:0.336461\n",
-      "[110]\teval-rmse:0.328658\n",
-      "[120]\teval-rmse:0.325175\n",
-      "[130]\teval-rmse:0.323587\n",
-      "[140]\teval-rmse:0.322657\n",
-      "[150]\teval-rmse:0.322152\n",
-      "[160]\teval-rmse:0.321778\n",
-      "[170]\teval-rmse:0.32146\n",
-      "[180]\teval-rmse:0.321216\n",
-      "[190]\teval-rmse:0.320811\n",
-      "[200]\teval-rmse:0.320791\n",
-      "[210]\teval-rmse:0.320634\n",
-      "[220]\teval-rmse:0.320532\n",
-      "[230]\teval-rmse:0.320243\n",
-      "[240]\teval-rmse:0.320344\n",
-      "[250]\teval-rmse:0.320179\n",
-      "[260]\teval-rmse:0.320107\n",
-      "[270]\teval-rmse:0.320093\n",
-      "[280]\teval-rmse:0.320061\n",
-      "[290]\teval-rmse:0.320252\n",
-      "[300]\teval-rmse:0.320291\n",
-      "[310]\teval-rmse:0.320471\n",
-      "[320]\teval-rmse:0.320517\n",
-      "Stopping. Best iteration:\n",
-      "[281]\teval-rmse:0.319991\n",
-      "\n",
-      "train_rmse = 0.257648786803 , val_rmse = 0.320517933831\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "isLog1p=True\n",
     "if (True):\n",
@@ -337,7 +461,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
