--- a/ML/model/FurtherModels.ipynb
+++ b/ML/model/FurtherModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -74,13 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conbined_data: (36650, 702)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_test, y_train = readData()\n",
     "#X_train, X_test = data_preprocess(X_train, X_test)"
@@ -88,13 +96,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-rmse:14.4028\ttest-rmse:14.4029\n",
+      "[50]\ttrain-rmse:1.15811\ttest-rmse:1.16151\n",
+      "[100]\ttrain-rmse:0.310493\ttest-rmse:0.335799\n",
+      "[150]\ttrain-rmse:0.283384\ttest-rmse:0.320504\n",
+      "[200]\ttrain-rmse:0.272601\ttest-rmse:0.319036\n",
+      "[250]\ttrain-rmse:0.263476\ttest-rmse:0.318562\n",
+      "[300]\ttrain-rmse:0.254741\ttest-rmse:0.318513\n",
+      "[350]\ttrain-rmse:0.247279\ttest-rmse:0.318398\n",
+      "[400]\ttrain-rmse:0.240182\ttest-rmse:0.318391\n",
+      "[450]\ttrain-rmse:0.23361\ttest-rmse:0.318726\n"
+     ]
+    }
+   ],
    "source": [
     "xgb_params = {\n",
     "        'eta': 0.05,\n",
@@ -130,12 +155,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dtest' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-18f3aff1eca0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mxgb_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0my_predict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dtest' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "train, test = data_preprocess(X_train, X_test)\n",
+    "xgb_params = {'learning_rate': 0.05,\n",
+    "              'max_depth': 4,\n",
+    "              'subsample': 0.95,\n",
+    "              'reg_alpha': 0,\n",
+    "              'min_child_weight':4,\n",
+    "              'colsample_bytree': 0.95,\n",
+    "              'gamma':.4,\n",
+    "              'objective': 'reg:linear',\n",
+    "              'silent': 1,\n",
+    "              #'booster' :'gbtree',\n",
+    "              #'tuneLength': 3,\n",
+    "              'seed': 5 }\n",
+    "#print(len(cv_output)) #309\n",
+    "\n",
+    "xgb_params['n_estimators']=620 #len(cv_output)\n",
+    "\n",
+    "model = XGBRegressor(**xgb_params)\n",
+    "model.fit(train, y_train)\n",
+    "y_predict = model.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model = GradientBoostingRegressor(learning_rate=0.02, n_estimators=500,min_samples_leaf=70, \n",
+    "                                 min_samples_split=200, max_features='sqrt',max_depth=6,subsample=0.85,\n",
+    "                                 random_state=10)\n",
+    "model.fit(train, y_train)\n",
+    "y_predict = model.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "et_params = {\n",
+    "    'n_jobs': 16,\n",
+    "    'n_estimators': 100,\n",
+    "    'max_features': 0.5,\n",
+    "    'max_depth': 12,\n",
+    "    'min_samples_leaf': 2,\n",
+    "    'random_state': 10\n",
+    "}\n",
+    "model = ExtraTreesRegressor(**et_params)\n",
+    "#train, test = data_preprocess(X_train, X_test)\n",
+    "model.fit(train, y_train)\n",
+    "y_predict = model.predict(test)"
+   ]
   },
   {
    "cell_type": "code",
@@ -147,11 +248,43 @@
    },
    "outputs": [],
    "source": [
+    "rf_params = {\n",
+    "    'n_jobs': 16,\n",
+    "    'n_estimators': 100,\n",
+    "    'max_features': 0.2,\n",
+    "    'max_depth': 12,\n",
+    "    'min_samples_leaf': 2,\n",
+    "}\n",
+    "model = RandomForestRegressor(**rf_params)\n",
+    "train, test = data_preprocess(X_train, X_test)\n",
+    "model.fit(train, y_train)\n",
+    "y_predict = model.predict(dtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "y_predict = np.exp(y_predict)-1\n",
     "#y_predict = np.round(y_predict)#np.round(y_predict * 0.99)\n",
     "output = pd.DataFrame({'id': pd.read_csv('../../input/test.csv')['id'], 'price_doc': y_predict})\n",
-    "output.to_csv('../result/jun24_3.csv', index=False)"
+    "output.to_csv('../result/jun25_5_ext.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
