--- a/ML/model/Stacking.ipynb
+++ b/ML/model/Stacking.ipynb
@@ -199,12 +199,19 @@
     "        RandomForestRegressor(max_depth=6, n_jobs=-1, random_state=123,\n",
     "            n_estimators=500, max_features=.95\n",
     "        ), #0.34513\n",
-    "        RandomForestRegressor(max_depth=5, n_jobs=-1, random_state=123,\n",
-    "            n_estimators=500, max_features=.95\n",
+    "#         RandomForestRegressor(max_depth=5, n_jobs=-1, random_state=123,\n",
+    "#             n_estimators=500, max_features=.95\n",
+    "#         ), #0.34513\n",
+    "        RandomForestRegressor(max_depth=12, min_samples_leaf=2, n_jobs=-1, random_state=16,\n",
+    "            n_estimators=100, max_features=.2\n",
     "        ), #0.34513\n",
-    "        ExtraTreesRegressor(\n",
-    "            n_jobs=-1, random_state=0, \n",
-    "            n_estimators=500, max_features=15\n",
+    "#         ExtraTreesRegressor(\n",
+    "#             n_jobs=-1, random_state=0, \n",
+    "#             n_estimators=500, max_features=15\n",
+    "#         ),\n",
+    "        ExtraTreesRegressor(min_samples_leaf=2, max_depth=12,\n",
+    "            n_jobs=-1, random_state=10, \n",
+    "          n_estimators=100, max_features=.5\n",
     "        ),\n",
     "        ExtraTreesRegressor(\n",
     "            n_jobs=-1, random_state=0, \n",
@@ -218,13 +225,15 @@
     "            n_estimators=500, max_features=15, max_depth=6,\n",
     "            learning_rate=0.05, subsample=0.8\n",
     "        ),\n",
-    "        XGBRegressor(seed=5, learning_rate=.02, subsample=.95, max_depth=6, min_child_weight=3, \n",
-    "            n_estimators=500, colsample_bytree=0.95\n",
+    "#         XGBRegressor(seed=5, learning_rate=.02, subsample=.95, max_depth=6, min_child_weight=3, \n",
+    "#             n_estimators=500, colsample_bytree=0.95\n",
+    "#         ), #0.31625 \n",
+    "        XGBRegressor(seed=5, learning_rate=.05, subsample=.95, max_depth=4, min_child_weight=4, \n",
+    "            n_estimators=620, colsample_bytree=0.95, gamma=.4,\n",
     "        ), #0.31625 \n",
     "        XGBRegressor(seed=5, learning_rate=.05, subsample=.7, max_depth=5, #min_child_weight=3, \n",
-    "            #n_estimators=250, \n",
-    "            colsample_bytree=0.7\n",
-    "                    ), #0.31625\n",
+    "            n_estimators=309, colsample_bytree=0.7\n",
+    "        ), #0.31625\n",
     "        LassoCV(alphas = [1, 0.1, 0.001, 0.0005]),\n",
     "        KNeighborsRegressor(n_neighbors = 5),\n",
     "        KNeighborsRegressor(n_neighbors = 10),\n",
@@ -297,7 +306,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -311,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
